[gd_scene load_steps=10 format=3 uid="uid://dvr1xpkbipcmf"]

[ext_resource type="Script" path="res://scenes/screen/pause.gd" id="1_1eib4"]
[ext_resource type="Texture2D" uid="uid://dossdhlom0sss" path="res://asset/asset jadi/pause screen/paused/paused (back).png" id="1_p1vlk"]
[ext_resource type="Texture2D" uid="uid://c880xfue0hnyr" path="res://asset/asset jadi/pause screen/paused/paused (writing).png" id="2_1gd4i"]
[ext_resource type="Texture2D" uid="uid://iqwm17ol41yr" path="res://asset/asset jadi/pause screen/continue/continue (back).png" id="3_8hd63"]
[ext_resource type="Texture2D" uid="uid://duy8lql1kn7eb" path="res://asset/asset jadi/pause screen/continue/continue ( writing).png" id="4_cxexc"]
[ext_resource type="Texture2D" uid="uid://bugg2bcsadhcl" path="res://asset/asset jadi/pause screen/restart/restart (back).png" id="5_xkfvy"]
[ext_resource type="Texture2D" uid="uid://dobwetlsm6pc7" path="res://asset/asset jadi/pause screen/restart/restart (writing).png" id="6_gtyto"]
[ext_resource type="Texture2D" uid="uid://c660l8u87d4ff" path="res://asset/asset jadi/pause screen/main menu/main menu (back).png" id="7_kkt0e"]
[ext_resource type="Texture2D" uid="uid://b637qaeo80071" path="res://asset/asset jadi/pause screen/main menu/main menu ( writing).png" id="8_uem1f"]

[node name="pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1eib4")

[node name="pausemenu" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="pausemenu"]
offset_left = -20.0
offset_top = -16.0
offset_right = 1968.0
offset_bottom = 1099.0

[node name="TextureRect" type="TextureRect" parent="pausemenu"]
offset_right = 1920.0
offset_bottom = 1077.0
texture = ExtResource("1_p1vlk")

[node name="TextureRect2" type="TextureRect" parent="pausemenu"]
offset_right = 1920.0
offset_bottom = 1077.0
texture = ExtResource("2_1gd4i")

[node name="TextureRect3" type="TextureRect" parent="pausemenu"]
offset_right = 1920.0
offset_bottom = 1077.0
texture = ExtResource("3_8hd63")

[node name="TextureRect4" type="TextureRect" parent="pausemenu"]
offset_right = 1920.0
offset_bottom = 1077.0
texture = ExtResource("4_cxexc")

[node name="TextureRect5" type="TextureRect" parent="pausemenu"]
offset_right = 1920.0
offset_bottom = 1077.0
texture = ExtResource("5_xkfvy")

[node name="TextureRect6" type="TextureRect" parent="pausemenu"]
offset_right = 1920.0
offset_bottom = 1077.0
texture = ExtResource("6_gtyto")

[node name="TextureRect7" type="TextureRect" parent="pausemenu"]
offset_right = 1920.0
offset_bottom = 1077.0
texture = ExtResource("7_kkt0e")

[node name="TextureRect8" type="TextureRect" parent="pausemenu"]
offset_right = 1920.0
offset_bottom = 1077.0
texture = ExtResource("8_uem1f")

[node name="main menu" type="Button" parent="pausemenu"]
modulate = Color(1, 1, 1, 0.164706)
offset_left = 726.0
offset_top = 716.0
offset_right = 1212.0
offset_bottom = 826.0

[node name="restart" type="Button" parent="pausemenu"]
modulate = Color(1, 1, 1, 0.168627)
offset_left = 729.0
offset_top = 571.0
offset_right = 1210.0
offset_bottom = 681.0

[node name="continue" type="Button" parent="pausemenu"]
modulate = Color(1, 1, 1, 0.164706)
offset_left = 727.0
offset_top = 417.0
offset_right = 1216.0
offset_bottom = 525.0

[connection signal="pressed" from="pausemenu/main menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="pausemenu/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="pausemenu/continue" to="." method="_on_continue_pressed"]
